# geoloc

./: CMakeLists.txt  README.md
geolocctl/: CMakeLists.txt  geolocctl  geolocctl.1  geolocctl.c
geolocd/: CMakeLists.txt  control.c  control.h  geoloc.c  geoloc.h  geolocd  geolocd.8  geolocd.conf  geolocd.conf.5  log.c  log.h  modules.h  parse.y
geolocd/modules/: mod_geoip.c  mod_geoip.h  mod_ip2location.c  mod_ip2location.h
