find_library(GEOIP_LIB GeoIP)
find_path(GEOIP_INC GeoIP.h)
include_directories(.)
include_directories(${GEOIP_INC})
file(GLOB SRCS *.c modules/*.c y.tab.c)
add_executable(geolocd ${SRCS})
target_link_libraries(geolocd ${GEOIP_LIB})
add_definitions(-DGEOLOC_GEOIP)
add_dependencies(geolocd yacc_command)

if (GEOLOC_INSTALL_PATH)
	install(TARGETS geolocd DESTINATION ${GEOLOC_INSTALL_PATH}/sbin)
endif()
